--- a/Frontend/Probando/Probando/Views/Home/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
             <ul class="slides">
                 <li>
                     <article>
-                        <p>Bienvenido a</p>
+                        <p>Bienvenido </p>@Session["usuario"]
                         <h3 class="heading">ServiExpres</h3>
                         <p>Contactanos para cualquier consulta y reservas de hora</p>
                         <footer><a class="btn inverse" href="../../reservaasp/Index.aspx">Agenda tu hora</a></footer>
