--- a/Frontend/Probando/Probando/Views/Producto/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Producto/Index.cshtml
@@ -21,13 +21,13 @@
             @Html.DisplayNameFor(model => model.fecha_vencimiento)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.id_proveedor)
+            @Html.DisplayNameFor(model => model.id_proveedor.nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.id_tipos)
+            @Html.DisplayNameFor(model => model.id_tipos.nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.id_familias)
+            @Html.DisplayNameFor(model => model.id_familias.nombre)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.precio_compra)
