--- a/Frontend/Probando/Probando/Views/Proveedor/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Proveedor/Index.cshtml
@@ -59,9 +59,9 @@
             @Html.DisplayFor(modelItem => item.activo)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id = item.id_proveedor }) |
+            @Html.ActionLink("Details", "Details", new { id = item.id_proveedor }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.id_proveedor }) 
         </td>
     </tr>
 }
