--- a/Frontend/Probando/Probando/Views/Cliente/Create.cshtml
+++ b/Frontend/Probando/Probando/Views/Cliente/Create.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Create";
 }
-<h2>Registrar</h2>
+<h2>Registrar Clientes</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -95,11 +95,11 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Regresar", "Index")
     </div>
 }
