--- a/Frontend/Probando/Probando/Views/Cliente/Delete.cshtml
+++ b/Frontend/Probando/Probando/Views/Cliente/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar Cliente</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estas seguro que quieres borrar este cliente?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -143,9 +143,10 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+<div class="form-actions no-color">
+    <input type="submit" value="Eliminar" class="btn btn-default" /> 
+    <br></br>
+    @Html.ActionLink("Regresar", "Index")
+</div>
     }
 </div>
