--- a/Frontend/Probando/Probando/Views/Cliente/Details.cshtml
+++ b/Frontend/Probando/Probando/Views/Cliente/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles de Cliente</h2>
 
 <div>
     <h4>Cliente</h4>
@@ -140,6 +140,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.id_cliente  }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index") |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id_cliente })
 </p>
