--- a/Frontend/Probando/Probando/Views/Cliente/Edit.cshtml
+++ b/Frontend/Probando/Probando/Views/Cliente/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar Datos de Cliente</h2>
 
 @using (Html.BeginForm())
 {
@@ -150,12 +150,12 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Guardar Cliente" class="btn btn-default" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
