--- a/Frontend/Probando/Probando/Views/Proveedor/Delete.cshtml
+++ b/Frontend/Probando/Probando/Views/Proveedor/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Borrar o Eliminar Proveedor</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Esta seguro que quiere eliminar este proveedor?</h3>
 <div>
     <h4>Proveedor</h4>
     <hr />
@@ -69,12 +69,20 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+
+        <input type="submit" value="Eliminar" class="btn btn-default" />
+        <br></br>
+        @Html.ActionLink("Regresar", "Index")
+    </div>
+
+
     }
+
+    
+    
 </div>
