--- a/Frontend/Probando/Probando/Views/Producto/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Producto/Index.cshtml
@@ -59,13 +59,13 @@
             @Html.DisplayFor(modelItem => item.fecha_vencimiento)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.id_proveedor.nombre)
+            @Html.DisplayFor(modelItem => item.nombreProveedor)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.id_tipos.nombre)
+            @Html.DisplayFor(modelItem => item.nombreTipo)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.id_familias.nombre)
+            @Html.DisplayFor(modelItem => item.nombreFamilia)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.precio_compra)
