--- a/Frontend/Probando/Probando/Views/Reserva/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Reserva/Index.cshtml
@@ -42,7 +42,7 @@
         @Html.DisplayFor(modelItem => item.id_reservas)
     </td>
     <th>
-        @Html.DisplayNameFor(model => model.nombreCliente)
+        @Html.DisplayFor(modelItem => item.nombreCliente) 
     </th>
     <td>
         @Html.DisplayFor(modelItem => item.fecha)
