--- a/Frontend/Probando/Probando/Views/Home/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Home/Index.cshtml
@@ -91,8 +91,8 @@
 
                         <li class="one_third first">
                             <article>
-                                <a href="TrenDelantero.aspx"><i class="btmspace-30 icon fa fa-500px"></i></a>
-                                <h2 class="heading">@Html.DisplayFor(modelItem => item.nombre)</h2>
+                                <a href="#"><i class="btmspace-30 icon fa fa-500px"></i></a>
+                                <h2 class="">@Html.DisplayFor(modelItem => item.nombre)</h2>
                             </article>
                         </li>
                         }
@@ -101,8 +101,8 @@
                         
                         <li class="one_third">
                             <article>
-                                <a href="TrenDelantero.aspx"><i class="btmspace-30 icon fa fa-500px"></i></a>
-                                <h2 class="heading">@Html.DisplayFor(modelItem => item.nombre)</h2>
+                                <a href="#"><i class="btmspace-30 icon fa fa-500px"></i></a>
+                                <h2 class="">@Html.DisplayFor(modelItem => item.nombre)</h2>
                             </article>
                         </li>
 
