--- a/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
+++ b/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     @{ 
                         if ( @Session["usuario"] != null )
                         {
-                            <li>mensajito si no esta nulo el usuario @Session["usuario "] </li>
+                            <li>Hola @Session["usuario"] </li>
                         }
                     }
 
