--- a/Frontend/Probando/Probando/Views/Test/Login.cshtml
+++ b/Frontend/Probando/Probando/Views/Test/Login.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             <div class="col-md-12">
 
-                @Html.TextBoxFor(model => model.password, new { @class = "form-control", @placeholder = "Password" })
+                @Html.PasswordFor(model => model.password, new { @class = "form-control", @placeholder = "Password" })
             </div>
         </div>
         
