--- a/Frontend/Probando/Probando/Content/table-dark.css
+++ b/Frontend/Probando/Probando/Content/table-dark.css
@@ -15,7 +15,10 @@ table.table tbody td {
     font-size: 12px;
     color: #398AA4;
 }
-
+    table.table tbody tr td {
+        font-size: 12px;
+        background: #398AA4;
+    }
 table.table tr:nth-child(even) {
     background: #444444;
 }
@@ -64,4 +67,8 @@ table.table tfoot .links a {
     color: #398AA4;
     padding: 2px 8px;
     border-radius: 5px;
+}
+text-danger {
+    color:black;
+
 }
