--- a/Frontend/Probando/Probando/Views/Reserva/Delete.cshtml
+++ b/Frontend/Probando/Probando/Views/Reserva/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿seguro quiere eliminar reserva?</h3>
 <div>
     <h4>Reserva</h4>
     <hr />
